Fixing safari vertical align for the album-art.  This works but I have no idea why it works.

--- a/src/assets/scss/audio-file-shop.scss
+++ b/src/assets/scss/audio-file-shop.scss
@@ -257,6 +257,7 @@ p {
    img {
      width: auto;
      height: 100%;
+     vertical-align: super; // This is entirely only necessary for Safari to look proper.  I HAVE NO IDEA WHY THIS MATTERS!
    }
   }
 
